# flow

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.agentflow/: AGENTS.md  README.md  business.md  config.yaml  constitution.md  conventions.md  editors.yaml  pitfalls.md  project.md  prompts.md  state.yaml
.agentflow/docs/: conventions.md  pitfalls.md  project.md
.agentflow/interfaces/: README.md  antigravity.md  claude.md  codex.md  cursor.md  kiro.md  qoder.md
.agentflow/prompts/: claude.md  codex.md  cursor.md  kiro.md  qoder.md
.agentflow/skills/: README.md  SKILL.md  brainstorm.md  finish.md  implement.md  plan.md  spec.md  verify.md
.github/workflows/: ci.yml  pages.yml
.kiro/steering/: agentflow.md
agentflow/: __init__.py  changes.py  cli.py  clipboard.py  context.py  core.py  diagnostics.py  editors.py  projects.py  quick_setup.py  repair.py  repl.py  skills.py  state.py  templates.py
archive/python/: README.md  pyproject.toml
archive/python/agentflow/: __init__.py  cli.py  core.py  diagnostics.py  editors.py  init_ui.py  repl.py
archive/python/tests/: test_core.py  test_init.py  test_packaging.py
docs/: index.html
src/: cli.ts  guidance.ts  init-ui.ts  templates.ts  terminal.ts  version.ts  workbench.ts
tests/: cli.test.ts  editors.test.ts  init.test.ts  templates.test.ts  terminal.test.ts  test_cli.py  test_clipboard.py  test_core.py  test_init.py  test_packaging.py  test_quick_setup.py  test_templates.py  workbench.test.ts
(+15 files in other folders)
